crates/solidity/testing/snapshots/bindings_output/variables/incomplete_type_name/generated/v2/0.4.11-failure.txt
# This file is generated automatically by infrastructure scripts. Please don't edit by hand.

Parse errors:
Error: Expected Identifier.
    ╭─[input.sol:11:1]
    │
 11 │ }
    │ │ 
    │ ╰─ Error occurred here.
────╯

------------------------------------------------------------------------

Definitions (4):
- Def: #1 ["Test" @ input.sol:1:10] (contract)
- Def: #2 ["Data" @ input.sol:2:12] (struct)
- Def: #3 ["field" @ input.sol:3:17] (struct member, type: uint120)
- Def: #4 ["data" @ input.sol:7:22] (state var, type: Data storage)

------------------------------------------------------------------------

References (2):
- Ref: ["Test" @ input.sol:7:5] -> #1
- Ref: ["Data" @ input.sol:7:10] -> #2

------------------------------------------------------------------------

Unbound identifiers (1):
- ???: ["Test" @ input.sol:10:5]

------------------------------------------------------------------------

Bindings: 
    ╭─[input.sol:1:1]
    │
  1 │ contract Test {
    │          ──┬─  
    │            ╰─── name: 1
  2 │     struct Data {
    │            ──┬─  
    │              ╰─── name: 2
  3 │         uint120 field;
    │                 ──┬──  
    │                   ╰──── name: 3
    │ 
  7 │     Test.Data public data;
    │     ──┬─ ──┬─        ──┬─  
    │       ╰──────────────────── ref: 1
    │            │           │   
    │            ╰─────────────── ref: 2
    │                        │   
    │                        ╰─── name: 4
    │ 
 10 │     Test.
    │     ──┬─  
    │       ╰─── ???
────╯
